--- a/img/images.graffle/data.plist
+++ b/img/images.graffle/data.plist
@@ -18,9 +18,10 @@
 	<key>GuidesVisible</key>
 	<string>YES</string>
 	<key>ImageCounter</key>
-	<integer>45</integer>
+	<integer>50</integer>
 	<key>ImageLinkBack</key>
 	<array>
+		<dict/>
 		<dict/>
 		<dict/>
 		<dict/>
@@ -31,6 +32,7 @@
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image49.pdf</string>
 		<string>image44.tiff</string>
 		<string>image43.tiff</string>
 		<string>image42.tiff</string>
@@ -46,7 +48,7 @@
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2017-05-19 18:41:12 +0000</string>
+	<string>2017-08-28 12:14:35 +0000</string>
 	<key>Modifier</key>
 	<string>Anthony Anjorin</string>
 	<key>NotesVisible</key>
@@ -1341,7 +1343,7 @@
 			<key>BackgroundGraphic</key>
 			<dict>
 				<key>Bounds</key>
-				<string>{{0, 0}, {559, 783}}</string>
+				<string>{{0, 0}, {1118, 783}}</string>
 				<key>Class</key>
 				<string>SolidGraphic</string>
 				<key>ID</key>
@@ -1372,6 +1374,43 @@
 			<string>1 0/72 in = 1.0000 in</string>
 			<key>GraphicsList</key>
 			<array>
+				<dict>
+					<key>Bounds</key>
+					<string>{{817, 447}, {124, 124}}</string>
+					<key>Class</key>
+					<string>ShapedGraphic</string>
+					<key>ID</key>
+					<integer>62</integer>
+					<key>ImageID</key>
+					<integer>49</integer>
+					<key>ManualSizeImage</key>
+					<string>YES</string>
+					<key>Offset</key>
+					<string>{0.23665636034735921, -0.12953495239695326}</string>
+					<key>Scale</key>
+					<real>0.61940234899520874</real>
+					<key>Shape</key>
+					<string>Circle</string>
+					<key>Style</key>
+					<dict>
+						<key>image fill</key>
+						<dict>
+							<key>ImageSizing</key>
+							<integer>0</integer>
+							<key>Offset</key>
+							<string>{0.23665636034735921, -0.12953495239695326}</string>
+							<key>Scale</key>
+							<real>0.61940234899520874</real>
+						</dict>
+						<key>stroke</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+							<key>Width</key>
+							<real>2</real>
+						</dict>
+					</dict>
+				</dict>
 				<dict>
 					<key>Bounds</key>
 					<string>{{341, 183}, {124, 124}}</string>
@@ -1500,7 +1539,7 @@
 								AZsAmwCGhoY=
 								</data>
 								<key>Text</key>
-								<string>{\rtf1\ansi\ansicpg1252\cocoartf1504\cocoasubrtf820
+								<string>{\rtf1\ansi\ansicpg1252\cocoartf1504\cocoasubrtf830
 \cocoascreenfonts1{\fonttbl\f0\fnil\fcharset0 Monaco;}
 {\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
 {\*\expandedcolortbl;;\csgray\c0\c0;}
@@ -1730,7 +1769,7 @@
 			<key>GridInfo</key>
 			<dict/>
 			<key>HPages</key>
-			<integer>1</integer>
+			<integer>2</integer>
 			<key>KeepToScale</key>
 			<false/>
 			<key>Layers</key>
@@ -1795,7 +1834,7 @@
 			</dict>
 		</array>
 		<key>Frame</key>
-		<string>{{295, 4}, {925, 741}}</string>
+		<string>{{324, 190}, {1674, 1053}}</string>
 		<key>ListView</key>
 		<true/>
 		<key>OutlineWidth</key>
@@ -1807,7 +1846,7 @@
 		<key>SidebarWidth</key>
 		<integer>120</integer>
 		<key>VisibleRegion</key>
-		<string>{{-123, 5}, {805, 631}}</string>
+		<string>{{-218, -79}, {1554, 943}}</string>
 		<key>Zoom</key>
 		<real>1</real>
 		<key>ZoomValues</key>
